examples/pts/neg/externDefCaptures.effekt
module examples/pts/neg/externDefCaptures

extern _ def func(x: Int): Int = "test"

def main() = {
    ()
}